--- a/templates/all-hotels.html
+++ b/templates/all-hotels.html
@@ -1,15 +1,15 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block title %}
-hotel-search-result
+booking-form
 {% endblock %}
 {% block cssfiles %}
 <link rel="stylesheet" href="{% static 'hotel-search.css' %}">
 {% endblock %}
-{% block content %}
+{% block  content %}
+
 
 <div class="container m-4">
-    <h4>You are searching {{location}}:{{total_hotel}} properties found.</h4>
     <div class="row">
         {% for hotel in hotels %}
         <div class="col-md-6">
@@ -19,7 +19,7 @@ hotel-search-result
                     </div>
                 <div class="description">
                     <h4 style="color:blue;font:inherit;font-size:20px;font-weight:bold;">{{hotel.hotel_name}}</h4>
-                    <p style="color:black;font:inherit;font-size:15px;">Location:{{location}}</p>
+                    <p style="color:black;font:inherit;font-size:15px;">Location:{{hotel.place.name}}</p>
                     
                 </div>
                 <div class="button-container">
@@ -30,24 +30,6 @@ hotel-search-result
         </div>
         {% endfor %}
     </div>
-
-
-
-
-
-
-
-
-
-
-
 </div>
-
-
-
-
-
-
-
 
 {% endblock %}
